--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "d3": "^4.8.0",
     "lodash": "^4.17.4",
     "react-redux": "^5.0.4",
     "react-router-dom": "next",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
-    "styled-components": "^1.4.6"
+    "styled-components": "^1.4.6",
+    "whatwg-fetch": "^2.0.3"
   },
   "ava": {
     "babel": "inherit",
