--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "d3": "^4.8.0",
     "lodash": "^4.17.4",
+    "prop-types": "^15.5.10",
     "react-redux": "^5.0.4",
     "react-router-dom": "next",
     "redux": "^3.6.0",
