--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react-redux": "^5.0.4",
-    "react-router-dom": "next",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "styled-components": "^1.4.6",
